Jyoti technosoft Portfolio : Add z-index to fix div overlayering issue

--- a/src/style.scss
+++ b/src/style.scss
@@ -8,3 +8,7 @@ $color-secondary : #dde7c1;
 .MuiDrawer-paperAnchorLeft {
     z-index: 999 !important;
 }
+
+.custom-drawer {
+    z-index: 999 !important;
+}
